src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Importo_acquisti_ultima_stagione_USD__c</fullName>
        <label>Importo acquisti ultima stagione USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stagione__c</fullName>
        <label>Importo acquisti ultima stagione (Sede)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stg_E_comm_BRL__c</fullName>
        <label>Acquisti ultima stagione E-commerce BRL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stg_E_comm_CAD__c</fullName>
        <label>Acquisti ultima stagione E-commerce CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stg_E_comm_CHF__c</fullName>
        <label>Acquisti ultima stagione E-commerce CHF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stg_E_comm_CNY__c</fullName>
        <label>Acquisti ultima stagione E-commerce CNY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stg_E_comm_EUR__c</fullName>
        <label>Acquisti ultima stagione E-commerce EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stg_E_comm_GBP__c</fullName>
        <label>Acquisti ultima stagione E-commerce GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stg_E_comm_HKD__c</fullName>
        <label>Acquisti ultima stagione E-commerce HKD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stg_E_comm_JPY__c</fullName>
        <label>Acquisti ultima stagione E-commerce JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stg_E_comm_MOP__c</fullName>
        <label>Acquisti ultima stagione E-commerce MOP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultima_stg_E_comm_USD__c</fullName>
        <label>Acquisti ultima stagione E-commerce USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultimi_24_mesi__c</fullName>
        <label>Importo acquisti ultimi 24 mesi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Importo_acquisti_ultimi_36_mesi__c</fullName>
        <label>Importo acquisti ultimi 36 mesi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_BRL__c</fullName>
        <label>Importo totale Resi BRL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_CAD__c</fullName>
        <label>Importo totale Resi CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_CHF__c</fullName>
        <label>Importo totale Resi CHF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_CNY__c</fullName>
        <label>Importo totale Resi CNY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_EUR__c</fullName>
        <label>Importo totale Resi EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_E_commerce_BRL__c</fullName>
        <label>Importo totale Resi E-commerce BRL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_E_commerce_CAD__c</fullName>
        <label>Importo totale Resi E-commerce CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_E_commerce_CHF__c</fullName>
        <label>Importo totale Resi E-commerce CHF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_E_commerce_CNY__c</fullName>
        <label>Importo totale Resi E-commerce CNY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_E_commerce_EUR__c</fullName>
        <label>Importo totale Resi E-commerce EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_E_commerce_GBP__c</fullName>
        <label>Importo totale Resi E-commerce GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_E_commerce_HKD__c</fullName>
        <label>Importo totale Resi E-commerce HKD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_E_commerce_JPY__c</fullName>
        <label>Importo totale Resi E-commerce JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_E_commerce_MOP__c</fullName>
        <label>Importo totale Resi E-commerce MOP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_E_commerce_USD__c</fullName>
        <label>Importo totale Resi E-commerce USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_E_commerce__c</fullName>
        <label>Importo totale Resi E-commerce</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_GBP__c</fullName>
        <label>Importo totale Resi GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_HKD__c</fullName>
        <label>Importo totale Resi HKD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_JPY__c</fullName>
        <label>Importo totale Resi JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_MOP__c</fullName>
        <label>Importo totale Resi MOP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi_USD__c</fullName>
        <label>Importo totale Resi USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Importo_totale_Resi__c</fullName>
        <label>Importo totale Resi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirizzo_DQ__c</fullName>
        <formula>IF (OUT_ADDRESS_CODE1__c =0 &amp;&amp; OUT_ADDRESS_CODE2__c =0, IMAGE(&apos;/resource/pallino_bianco&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Dato Validato senza correzioni&quot;,
IF (OUT_ADDRESS_CODE1__c =0 &amp;&amp; OUT_ADDRESS_CODE2__c =1, IMAGE(&apos;/resource/pallino_bianco&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Dato Valido ma con possibili difettosità minori non correggibili (housenumber non validabile, Street Type da verificare, …)&quot;,
IF (OUT_ADDRESS_CODE1__c =0 &amp;&amp; OUT_ADDRESS_CODE2__c =2, IMAGE(&apos;/resource/pallino_verde&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Aggiornamento-Arricchimento ZipCode&quot;,
IF (OUT_ADDRESS_CODE1__c =0 &amp;&amp; OUT_ADDRESS_CODE2__c =3, IMAGE(&apos;/resource/pallino_verde&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Aggiornamento-Arricchimento City-Region-State-County&quot;,
IF (OUT_ADDRESS_CODE1__c =0 &amp;&amp; OUT_ADDRESS_CODE2__c =4, IMAGE(&apos;/resource/pallino_verde&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Aggiornamento-Arricchimento Address&quot;,
IF (OUT_ADDRESS_CODE1__c =0 &amp;&amp; OUT_ADDRESS_CODE2__c =5, IMAGE(&apos;/resource/pallino_giallo&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Aggiornamento-Arricchimento Address con possibili difettosità minori (housenumber non validabile, Street Type da verificare, …)&quot;,
IF (OUT_ADDRESS_CODE1__c =1 &amp;&amp; OUT_ADDRESS_CODE2__c =1, IMAGE(&apos;/resource/pallino_giallo&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Warning sulla componente City-ZipCode, Indirizzo non normalizzabile.&quot;,
IF (OUT_ADDRESS_CODE1__c =1 &amp;&amp; OUT_ADDRESS_CODE2__c =2, IMAGE(&apos;/resource/pallino_giallo&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Assenza dell&apos;HouseNumber&quot;,
IF (OUT_ADDRESS_CODE1__c =1 &amp;&amp; OUT_ADDRESS_CODE2__c =3, IMAGE(&apos;/resource/pallino_giallo&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Warning sulla componente Address, Indirizzo non normalizzabile.&quot;,
IF (OUT_ADDRESS_CODE1__c =2 &amp;&amp; OUT_ADDRESS_CODE2__c =1, IMAGE(&apos;/resource/pallino_rosso&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Indirizzo non valido&quot;,
IF (OUT_ADDRESS_CODE1__c =2 &amp;&amp; OUT_ADDRESS_CODE2__c =2, IMAGE(&apos;/resource/pallino_rosso&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Indirizzo non presente&quot;, &quot;&quot;)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirizzo DQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo_Secondario__c</fullName>
        <label>Indirizzo Secondario</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo_UTF_8__c</fullName>
        <label>Indirizzo in caratteri locali</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo_di_spedizione_pi_frequente__c</fullName>
        <label>Indirizzo di spedizione più frequente</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsSlave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSlave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI_Postalizzazione_Cliente__c</fullName>
        <formula>CASE (OUT_KPI1_POSTAL__c,
0, IMAGE(&apos;/resource/pallino_verde&apos;, &apos;&apos;, 15, 15),
1, IMAGE(&apos;/resource/pallino_giallo&apos;, &apos;&apos;, 15, 15),
2, IMAGE(&apos;/resource/pallino_rosso&apos;, &apos;&apos;, 15, 15),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nome, Cognome, 
Indirizzo (almeno uno)</inlineHelpText>
        <label>KPI Postalizzazione Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Raggiungibilit_Cliente_data_nascita__c</fullName>
        <formula>CASE (OUT_KPI4_DATE__c,
0, IMAGE(&apos;/resource/pallino_verde&apos;, &apos;&apos;, 15, 15),
1, IMAGE(&apos;/resource/pallino_giallo&apos;, &apos;&apos;, 15, 15),
2, IMAGE(&apos;/resource/pallino_rosso&apos;, &apos;&apos;, 15, 15),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nome, Cognome, 
Birthdate</inlineHelpText>
        <label>KPI Raggiungibilità Cliente data nascita</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Raggiungibilit_Cliente_via_Email__c</fullName>
        <formula>CASE (OUT_KPI2_EMAIL__c,
0, IMAGE(&apos;/resource/pallino_verde&apos;, &apos;&apos;, 15, 15),
1, IMAGE(&apos;/resource/pallino_giallo&apos;, &apos;&apos;, 15, 15),
2, IMAGE(&apos;/resource/pallino_rosso&apos;, &apos;&apos;, 15, 15),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nome Cognome, 
Email o Numero di telefono (almeno uno)</inlineHelpText>
        <label>KPI Raggiungibilità Cliente via Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPI_Raggiungibilit_Cliente_via_Telefono__c</fullName>
        <formula>CASE (OUT_KPI3_PHONE__c,
0, IMAGE(&apos;/resource/pallino_verde&apos;, &apos;&apos;, 15, 15),
1, IMAGE(&apos;/resource/pallino_giallo&apos;, &apos;&apos;, 15, 15),
2, IMAGE(&apos;/resource/pallino_rosso&apos;, &apos;&apos;, 15, 15),
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Nome Cognome,
Email o Numero di telefono (almeno uno)</inlineHelpText>
        <label>KPI Raggiungibilità Cliente via Telefono</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language (TEST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Boutique__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Boutique</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Customers (Last Boutique)</relationshipLabel>
        <relationshipName>Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Cleansing_Date__c</fullName>
        <label>Last Cleansing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_contact_category__c</fullName>
        <label>Last activity category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Activity_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_contact_date__c</fullName>
        <label>Last activity date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_contact_type__c</fullName>
        <label>Last activity type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_purchase_store_is_my_store__c</fullName>
        <formula>IF(AND ($User.ProfileId = $Setup.Profile__c.Id_Boutique__c,
!ISNULL( Last_Boutique__c ),
Last_Boutique__r.Id_Location_Micros__c = $User.Codice_Boutique__c ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last purchase store is my store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lingua__c</fullName>
        <label>Lingua</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ar</fullName>
                    <label>Arabic</label>
                </value>
                <value>
                    <fullName>bg</fullName>
                    <label>Bulgarian</label>
                </value>
                <value>
                    <fullName>cs</fullName>
                    <label>Czech</label>
                </value>
                <value>
                    <fullName>da</fullName>
                    <label>Danish</label>
                </value>
                <value>
                    <fullName>nl</fullName>
                    <label>Dutch</label>
                </value>
                <value>
                    <fullName>en</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>et</fullName>
                    <label>Estonian</label>
                </value>
                <value>
                    <fullName>fi</fullName>
                    <label>Finnish</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>de</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>el</fullName>
                    <label>Greek</label>
                </value>
                <value>
                    <fullName>he</fullName>
                    <label>Hebrew</label>
                </value>
                <value>
                    <fullName>hu</fullName>
                    <label>Hungarian</label>
                </value>
                <value>
                    <fullName>it</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>ko</fullName>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>lv</fullName>
                    <label>Latvian</label>
                </value>
                <value>
                    <fullName>lt</fullName>
                    <label>Lithuanian</label>
                </value>
                <value>
                    <fullName>no</fullName>
                    <label>Norwegian</label>
                </value>
                <value>
                    <fullName>pl</fullName>
                    <label>Polish</label>
                </value>
                <value>
                    <fullName>pt</fullName>
                    <label>Portuguese</label>
                </value>
                <value>
                    <fullName>ro</fullName>
                    <label>Romanian</label>
                </value>
                <value>
                    <fullName>sk</fullName>
                    <label>Slovak</label>
                </value>
                <value>
                    <fullName>sl</fullName>
                    <label>Slovenian</label>
                </value>
                <value>
                    <fullName>es</fullName>
                    <label>Spanish</label>
                </value>
                <value>
                    <fullName>sv</fullName>
                    <label>Swedish</label>
                </value>
                <value>
                    <fullName>th</fullName>
                    <label>Thai</label>
                </value>
                <value>
                    <fullName>tr</fullName>
                    <label>Turkish</label>
                </value>
                <value>
                    <fullName>uk</fullName>
                    <label>Ucrainian</label>
                </value>
                <value>
                    <fullName>ru</fullName>
                    <label>русскийязык</label>
                </value>
                <value>
                    <fullName>ja</fullName>
                    <label>日本語</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_netto_resi_e_gift_AUD__c</fullName>
        <description>Listino Acquisti netto resi e netto gift</description>
        <label>Listino Acquisti netto resi e gift AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_netto_resi_e_gift_BRL__c</fullName>
        <description>Listino Acquisti netto resi e netto gift</description>
        <label>Listino Acquisti netto resi e gift BRL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_netto_resi_e_gift_CAD__c</fullName>
        <description>Listino Acquisti netto resi e netto gift</description>
        <label>Listino Acquisti netto resi e gift CAD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_netto_resi_e_gift_CHF__c</fullName>
        <description>Listino Acquisti netto resi e netto gift</description>
        <label>Listino Acquisti netto resi e gift CHF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_netto_resi_e_gift_CNY__c</fullName>
        <description>Listino Acquisti netto resi e netto gift</description>
        <label>Listino Acquisti netto resi e gift CNY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_netto_resi_e_gift_DKK__c</fullName>
        <description>Listino Acquisti netto resi e netto gift</description>
        <label>Listino Acquisti netto resi e gift DKK</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_netto_resi_e_gift_EUR__c</fullName>
        <description>Listino Acquisti netto resi e netto gift</description>
        <label>Listino Acquisti netto resi e gift EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_netto_resi_e_gift_GBP__c</fullName>
        <description>Listino Acquisti netto resi e netto gift</description>
        <label>Listino Acquisti netto resi e gift GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_netto_resi_e_gift_HKD__c</fullName>
        <description>Listino Acquisti netto resi e netto gift</description>
        <label>Listino Acquisti netto resi e gift HKD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_netto_resi_e_gift_JPY__c</fullName>
        <description>Listino Acquisti netto resi e netto gift</description>
        <label>Listino Acquisti netto resi e gift JPY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_netto_resi_e_gift_RUB__c</fullName>
        <description>Listino Acquisti netto resi e netto gift</description>
        <label>Listino Acquisti netto resi e gift RUB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_netto_resi_e_gift_USD__c</fullName>
        <description>Listino Acquisti netto resi e netto gift</description>
        <label>Listino Acquisti netto resi e gift USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_netto_resi_e_gift__c</fullName>
        <label>Listino Acquisti netto resi e gift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listino_Acquisti_no_resi_e_gift_valuta__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;,  Listino_Acquisti_netto_resi_e_gift_BRL__c, 
&quot;CAD&quot;,  Listino_Acquisti_netto_resi_e_gift_CAD__c, 
&quot;CHF&quot;,  Listino_Acquisti_netto_resi_e_gift_CHF__c, 
&quot;CNY&quot;,  Listino_Acquisti_netto_resi_e_gift_CNY__c, 
&quot;EUR&quot;,  Listino_Acquisti_netto_resi_e_gift_EUR__c, 
&quot;GBP&quot;,  Listino_Acquisti_netto_resi_e_gift_GBP__c, 
&quot;HKD&quot;,  Listino_Acquisti_netto_resi_e_gift_HKD__c, 
&quot;JPY&quot;,  Listino_Acquisti_netto_resi_e_gift_JPY__c, 
&quot;USD&quot;,  Listino_Acquisti_netto_resi_e_gift_USD__c,
Listino_Acquisti_netto_resi_e_gift__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Listino Acquisti no resi e gift valuta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Full_Name__c</fullName>
        <description>Full local name of the customer</description>
        <formula>Cognome_UTF_8__c   &amp; &quot; &quot; &amp;  Nome_UTF_8__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Manuale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Location Manuale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>It’s the boutique the client seems to prefer for her/his purchases, over the years. We consider both the total amount spent and recency of purchase: recent purchase weight more than past ones (-10% weight going back year after year)</inlineHelpText>
        <label>Boutique di assegnazione</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loyalty_Anno_Ultimi_12_Mesi__c</fullName>
        <formula>IF(Totale_Pezzi_Acquistati_Ultimi_12_Mesi__c &gt;=4, IMAGE(&apos;/resource/Loyalty_3&apos;, &apos;Hight&apos;, 15, 170), 

IF(OR(Totale_Pezzi_Acquistati_Ultimi_12_Mesi__c =2,Totale_Pezzi_Acquistati_Ultimi_12_Mesi__c =3), IMAGE(&apos;/resource/Loyalty_2&apos;, &apos;Medium&apos;, 15, 170), 

IF(Totale_Pezzi_Acquistati_Ultimi_12_Mesi__c =1, IMAGE(&apos;/resource/Loyalty_1&apos;, &apos;Low&apos;, 15, 170), 

IMAGE(&apos;/resource/Loyalty_0&apos;, &apos;Very Low&apos;, 15, 170) 

) 

) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loyalty Anno (Ultimi 12 Mesi)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty_Stagione_Ultima_Stagione__c</fullName>
        <formula>IF(Totale_Pezzi_Acquistati_Ultima_Stagione__c   &gt;=4, IMAGE(&apos;/resource/Loyalty_3&apos;, &apos;Hight&apos;, 15, 170), 

IF(OR(Totale_Pezzi_Acquistati_Ultima_Stagione__c   =2,Totale_Pezzi_Acquistati_Ultima_Stagione__c   =3), IMAGE(&apos;/resource/Loyalty_2&apos;, &apos;Medium&apos;, 15, 170), 

IF(Totale_Pezzi_Acquistati_Ultima_Stagione__c   =1, IMAGE(&apos;/resource/Loyalty_1&apos;, &apos;Low&apos;, 15, 170), 

IMAGE(&apos;/resource/Loyalty_0&apos;, &apos;Very Low&apos;, 15, 170) 

) 

) 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loyalty Stagione (Ultima Stagione)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loyalty__c</fullName>
        <formula>IF(Numero_Acquisti_ultime_2_stagioni__c&gt;=4, IMAGE(&apos;/resource/Loyalty_3&apos;, &apos;Hight&apos;, 15, 170), 

IF(OR(Numero_Acquisti_ultime_2_stagioni__c=2,Numero_Acquisti_ultime_2_stagioni__c=3), IMAGE(&apos;/resource/Loyalty_2&apos;, &apos;Medium&apos;, 15, 170), 

IF(Numero_Acquisti_ultime_2_stagioni__c=1, IMAGE(&apos;/resource/Loyalty_1&apos;, &apos;Low&apos;, 15, 170), 

IMAGE(&apos;/resource/Loyalty_0&apos;, &apos;Very Low&apos;, 15, 170) 

) 

) 

)</formula>
        <inlineHelpText>Indicator relative to purchases made in the last six months \ n
0 Purchases - Very Low (Grey) 
1 Buyer - Low (1 orange square) 
2-3 Purchases - Medium (2 orange squares) 
&gt; = 4 Purchases - High (3 orange squares)</inlineHelpText>
        <label>Loyalty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandare_ad_AS400__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandare ad AS400</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_FRM__c</fullName>
        <formula>IF(Privacy1__c = true || Privacy2__c = true, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing FRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Y_N__c</fullName>
        <formula>IF ( OR( Privacy1__c = true, Privacy2__c = true), true,
IF (AND (Privacy_1__c = true,Privacy1__c = false,Privacy2__c = false,ISBLANK(Data_Ultimo_Aggiornamento_Privacy__c)) 
     , true, false ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Y/N</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <formula>IF(Privacy1__c = true || Privacy2__c = true, IMAGE(&apos;/resource/Approval&apos;,&apos;none&apos;,25,25) ,  IMAGE(&apos;/resource/Close&apos;,&apos;none&apos;,25,25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_old__c</fullName>
        <formula>IF(Privacy_1__c = true , IMAGE(&apos;/resource/Approval&apos;,&apos;none&apos;,25,25) ,  IMAGE(&apos;/resource/Close&apos;,&apos;none&apos;,25,25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing old</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Record_Id__c</fullName>
        <label>Master Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Slave__c</fullName>
        <label>Master/Slave</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non Importare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Messaging__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instant Messaging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Micros_ID_Store_Manager__c</fullName>
        <formula>Location__r.Boutique_Store_Manager__r.Id_Associate_Micros__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Micros ID Store Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modalit_Di_Consegna_Preferita__c</fullName>
        <label>Modalità Di Consegna Preferita</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Presso punto vendita</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivazione_Annullamento__c</fullName>
        <label>Motivazione Annullamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Motivazione 1</fullName>
                </value>
                <value>
                    <fullName>Motivazione 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivazione_Richiesta_Sconto__c</fullName>
        <label>Motivazione Richiesta Sconto</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>My_new_client__c</fullName>
        <formula>IF ( 
AND (YEAR(Data_Primo_Acquisto__c) = YEAR(Today()), 
     $User.ProfileId =  $Setup.Profile__c.Id_Associate__c),
     IF (Id_Associate__c = $User.Codice_Associate__c , 1, 0),

IF (AND (
   YEAR(Data_Primo_Acquisto__c) = YEAR(Today()), 
   $User.ProfileId =  $Setup.Profile__c.Id_Boutique__c),
      IF (Id_Location__c = $User.Codice_Boutique__c , 1, 0),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My new client</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Acquisti_Full_Price_Netto_Resi__c</fullName>
        <label>N° acquisti full price netto resi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Clienti__c</fullName>
        <formula>/* formula valorizzata sempre a uno per conteggiare il n° di clienti in report sui dettagli transazione*/
1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>N° Clienti</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Ordini_E_commerce__c</fullName>
        <label>N° ordini E-commerce</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Scontrini__c</fullName>
        <label>N° Scontrini</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Scontrini_con_Resi__c</fullName>
        <label>N° Scontrini con Resi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Scontrini_netto_resi_netto_gift__c</fullName>
        <label>N Scontrini netto resi netto gift</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_Service_Notes__c</fullName>
        <label>N° Service Notes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_of_Activity_Tracking__c</fullName>
        <label>N° of Activity Tracking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>